tests/rosetta/out/Fortran/active-object.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:38Z
program active_object
  implicit none
  real :: PI
  real :: dt
  real :: s
  real :: t1
  real :: k1
  integer :: i
  integer :: i2
    integer :: t2
    integer :: k2
    integer :: term
    integer :: sum
    integer :: n
      integer :: denom
  PI = 3.141592653589793
  dt = 0.01
  s = 0
  t1 = 0
  k1 = sinApprox(0)
  i = 1
  do while ((i <= 200))
    t2 = ((real(i)) * dt)
    k2 = sinApprox((t2 * PI))
    s = (((s + ((k1 + k2))) * 0.5) * ((t2 - t1)))
    t1 = t2
    k1 = k2
    i = (i + 1)
  end do
  i2 = 1
  do while ((i2 <= 50))
    t2 = ((2 + (real(i2))) * dt)
    k2 = 0
    s = (((s + ((k1 + k2))) * 0.5) * ((t2 - t1)))
    t1 = t2
    k1 = k2
    i2 = (i2 + 1)
  end do
  print *, s
  contains
  recursive real function sinApprox(x) result(res)
    real, intent(in) :: x
    term = x
    sum = x
    n = 1
    do while ((n <= 12))
      denom = real(((((2 * n)) * (((2 * n) + 1)))))
      term = (((-term * x) * x) / denom)
      sum = (sum + term)
      n = (n + 1)
    end do
    res = sum
    return
  end function sinApprox
end program active_object
